--- a/templates/redis.conf.erb
+++ b/templates/redis.conf.erb
@@ -36,7 +36,7 @@ tcp-backlog <%= @tcp_backlog %>
 # If you want you can bind a single interface, if the bind option is not
 # specified all the interfaces will listen for incoming connections.
 #
-bind <%= @bind %>
+<% if @bind -%>bind <%= @bind %><% end -%>
 
 # Specify the path for the unix socket that will be used to listen for
 # incoming connections. There is no default, so Redis will not listen
