--- a/templates/redis.conf.erb
+++ b/templates/redis.conf.erb
@@ -33,10 +33,12 @@ port <%= @port %>
 # in order to get the desired effect.
 tcp-backlog <%= @tcp_backlog %>
 
+<% unless @bind_arr.empty? -%>
 # If you want you can bind a single interface, if the bind option is not
 # specified all the interfaces will listen for incoming connections.
 #
-bind <%= @bind %>
+bind <%= @bind_arr.join(' ') %>
+<% end -%>
 
 # Specify the path for the unix socket that will be used to listen for
 # incoming connections. There is no default, so Redis will not listen
