--- a/templates/redis.conf.erb
+++ b/templates/redis.conf.erb
@@ -755,6 +755,7 @@ cluster-config-file <%= @cluster_config_file %>
 cluster-node-timeout <%= @cluster_node_timeout %>
 cluster-slave-validity-factor <%= @cluster_slave_validity_factor %>
 cluster-require-full-coverage <% if @cluster_require_full_coverage -%>yes<% else -%>no<% end %>
+cluster-migration-barrier <%= @cluster_migration_barrier %>
 <% end -%>
 
 
