--- a/templates/redis.conf.erb
+++ b/templates/redis.conf.erb
@@ -38,7 +38,7 @@ pidfile <%= @pid_file %>
 # you are sure you want clients from other hosts to connect to Redis
 # even if no authentication is configured, nor a specific set of interfaces
 # are explicitly listed using the "bind" directive.
-protected-mode <%= @protected_mode %>
+protected-mode <%= @protected_mode ? 'yes' : 'no' %>
 
 <% end -%>
 # Accept connections on the specified port, default is 6379.
