--- a/templates/service_templates/redis.service.erb
+++ b/templates/service_templates/redis.service.erb
@@ -3,6 +3,8 @@ Description=Advanced key-value store for <%= @title %>
 After=network.target
 
 [Service]
+RuntimeDirectory=redis
+RuntimeDirectoryMode=0755
 Type=forking
 ExecStart=/usr/bin/redis-server <%= @redis_file_name %>
 ExecStop=/usr/bin/redis-server -p <%= @port %> shutdown
