Fix redis shutdown if a password is set

--- a/templates/service_templates/redis.service.erb
+++ b/templates/service_templates/redis.service.erb
@@ -15,7 +15,7 @@ ExecStart=/usr/bin/redis-server <%= @redis_file_name %>
 Type=notify
 ExecStart=/usr/bin/redis-server <%= @redis_file_name %> --supervised systemd
 <% end -%>
-ExecStop=/usr/bin/redis-cli -p <%= @port %> shutdown
+ExecStop=/bin/kill -s TERM $MAINPID
 Restart=always
 User=<%= @service_user %>
 Group=<%= @service_user %>
