Add support for managing Redis APT repo
add missing scopes
Use APT for Debian based systems
Install puppetlabs/apt for Debian systems being tested
Use new Redis key
Add param documentation
turn off protected_mode to resolve protected mode errors on Redis 7.x
Bind to all interfaces
Ensure lsb-release is installed for testing
Add supervised option for Redis 7.x
set params to undef if not defined earlier
Don't use redis api repo by default
Add test for using redis_apt_repo

--- a/templates/redis-sentinel.conf.erb
+++ b/templates/redis-sentinel.conf.erb
@@ -7,6 +7,7 @@ tls-port <%= @sentinel_tls_port %>
 <% end -%>
 dir <%= @working_dir %>
 daemonize <%= @daemonize ? 'yes' : 'no' %>
+supervised auto
 pidfile <%= @pid_file %>
 protected-mode <%= @protected_mode ? 'yes' : 'no' %>
 
