Add replica-announce-ip, replica-announce-port and sentinel announce-ip parameters

--- a/templates/redis-sentinel.conf.erb
+++ b/templates/redis-sentinel.conf.erb
@@ -14,6 +14,9 @@ protected-mode <%= @protected_mode ? 'yes' : 'no' %>
 <% if @sentinel_announce_hostnames -%>
 sentinel announce-hostnames <%= @sentinel_announce_hostnames %>
 <% end -%>
+<% if @sentinel_announce_ip -%>
+sentinel announce-ip <%= @sentinel_announce_ip %>
+<% end -%>
 <% if @sentinel_resolve_hostnames -%>
 sentinel resolve-hostnames <%= @sentinel_resolve_hostnames %>
 <% end -%>
