Implement raw ACL passing for Sentinel and Redis

--- a/templates/redis-sentinel.conf.erb
+++ b/templates/redis-sentinel.conf.erb
@@ -54,3 +54,7 @@ tls-replication <%= @tls_replication ? 'yes' : 'no' %>
 
 loglevel <%= @log_level %>
 logfile <%= @log_file %>
+
+<% if @acls -%>
+<%= @acls %>
+<% end -%>
