Convert acls in an array and add spec tests

--- a/templates/redis-sentinel.conf.erb
+++ b/templates/redis-sentinel.conf.erb
@@ -54,7 +54,9 @@ tls-replication <%= @tls_replication ? 'yes' : 'no' %>
 
 loglevel <%= @log_level %>
 logfile <%= @log_file %>
+<% unless @acls.empty? -%>
 
-<% if @acls -%>
-<%= @acls %>
+<%   @acls.each do |acl| -%>
+<%= acl %>
+<%   end -%>
 <% end -%>
