Add parameter sentinel_announce_port
Pull Request (PR) description
This PR adds the parameter to configure the Sentinel announced port

--- a/templates/redis-sentinel.conf.erb
+++ b/templates/redis-sentinel.conf.erb
@@ -17,6 +17,9 @@ sentinel announce-hostnames <%= @sentinel_announce_hostnames %>
 <% if @sentinel_announce_ip -%>
 sentinel announce-ip <%= @sentinel_announce_ip %>
 <% end -%>
+<% if @sentinel_announce_port -%>
+sentinel announce-port <%= @sentinel_announce_port %>
+<% end -%>
 <% if @sentinel_resolve_hostnames -%>
 sentinel resolve-hostnames <%= @sentinel_resolve_hostnames %>
 <% end -%>
